[tool.poetry]
name = "blood-pressure-federated-radar-meassuring"
version = "0.1.0"
description = ""
authors = ["Bruno Lima Cardoso <blimacardoso@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.1"
dask = "^2022.3.0"
plotly = "^5.6.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
